<resources>
    <string name="app_name">HiveApp</string>
    <string name="title_logo">title_logo</string>
    <string name="submit">Submit</string>
    <string name="phone_number">Phone Number</string>
    <string name="_91">+91</string>
    <string name="verify">Verify</string>
    <string name="enter_6_digit_otp_sent_to_your_number">Enter 6 digit otp sent to your number</string>
    <string name="enter_verfification_code">OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="name">Name</string>
    <string name="about">App Info</string>
    <string name="done">Done</string>
    <string name="hi_i_am_using_hime">Hi, I am using HiveApp</string>

    <string name="image_full_screen">image_full_screen</string>
    <string name="download">Download</string>
    <string name="filedescription">fileDescription</string>


    <string name="image">Image</string>
    <string name="type_group_name">Type group name</string>


    <!--Strings related to Library Files -->

    <string name="sender_id" />

    <!-- Dialogs strings -->
    <string name="dlg_signal_error">Disconnected… Please check your Internet connection!</string>
    <string name="dlg_relogin_wait">You are still connecting.. Please try once more</string>
    <string name="dlg_retry">Retry</string>
    <string name="dlg_allow">Allow</string>

    <!-- Notification -->
    <string name="notification_title">You have an active call</string>
    <string name="notification_text">Touch takes you back to the call %1$s</string>

    <!-- Errors strings -->
    <string name="error">Error</string>
    <string name="error_credentials_empty">Credentials are wrong or empty. You have to set:
        Application ID, Authentification Key, Authentification Secret, Account Key in constants in App.java
        and you have to set Sender ID in the string resources to launch application.
        If you haven\'t them you can register new account and application at https://admin.quickblox.com
        then put Application credentials from Overview page + Account key from https://admin.quickblox.com/account/settings</string>
    <string name="sign_up_error">Error creating new user, please try again</string>
    <string name="sign_in_error">Error SignIn user, please try again</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="no_connection_error">Connection failed. Please check your internet connection.</string>
    <string name="no_responce_timeout">No response received within reply timeout</string>

    <string name="error_permission_video">You should allow Camera permission</string>
    <string name="error_permission_audio">You should allow Microphone permission</string>

    <string name="login_chat_login_error">Login Chat error. Please relogin. Error</string>
    <string name="update_user_error">Update user error. Error</string>
    <string name="loading_users_error">Loading users error. Error</string>

    <string name="permission_unavailable">%s is not available now!</string>

    <string name="field_name_user_login">User name</string>
    <string name="field_name_user_fullname">User Full Name</string>

    <string name="error_name_must_not_contain_special_characters_from_app">%1$s must contain 3 &#8212; %2$s alphanumeric Latin characters without spaces, the first char must be a letter</string>

    <!-- menu -->
    <string name="action_start_login">More</string>
    <string name="action_settings">Settings</string>
    <string name="action_screen_share">Screen share</string>

    <!-- action bar -->
    <string name="actionbar_title_settings">Settings</string>
    <string name="subtitle_text_logged_in_as">Logged in as %s</string>

    <string name="also_on_call">Also on call:</string>
    <string name="user_list_on_call">User 1, User 2, User 3, User 4, User 5, User 6</string>

    <string name="opponent_pending">Pending</string>
    <string name="opponent_closed">Closed</string>
    <string name="text_incoming_audio_call">Incoming Audio Call</string>
    <string name="text_incoming_video_call">Incoming Video Call</string>
    <string name="text_status_connect">Connect…</string>
    <string name="text_status_checking">Checking…</string>
    <string name="text_status_connected">Connected</string>
    <string name="text_status_disconnected">Disconnected</string>

    <string name="text_status_rejected">Rejected</string>
    <string name="text_status_no_answer">No answer</string>
    <string name="text_status_hang_up">Hung up</string>
    <string name="text_status_closed">Closed</string>

    <string name="text_push_notification_message">"%s is calling you"</string>

    <!-- Settings strings. -->
    <string name="title_video_category">Video</string>
    <string name="title_call_settings_category">Call Settings</string>

    <integer name="pref_default_int_value">0</integer>

    <string name="pref_frame_rate_key">frame_rate</string>
    <string name="pref_frame_rate_title">Frame Rate (0&#8211;30)</string>
    <string name="pref_frame_rate_default">0</string>
    <integer name="pref_frame_rate_min_value">0</integer>
    <integer name="pref_frame_rate_max_value">30</integer>
    <integer name="pref_frame_rate_stepSize">5</integer>

    <string name="pref_resolution_key">resolution_preference</string>
    <string name="pref_resolution_title">Video Format</string>
    <string name="pref_resolution_dlg">Enter RTC local video resolution</string>
    <string name="pref_resolution_default">-1</string>

    <string name="pref_startbitratevalue_key">startbitratevalue_preference</string>
    <string name="pref_startbitratevalue_title">Bandwidth (0&#8211;2000)</string>
    <string name="pref_startbitratevalue_default">0</string>
    <integer name="pref_startbitratevalue_min_value">0</integer>
    <integer name="pref_startbitratevalue_max_value">2000</integer>
    <integer name="pref_startbitratevalue_step_size">100</integer>

    <string name="pref_disable_built_in_aec_key">disable_built_in_aec_preference</string>
    <string name="pref_disable_built_in_aec_title">Disable built-in AEC</string>
    <string name="pref_disable_built_in_aec_dlg">Disable built-in AEC</string>
    <string name="pref_disable_built_in_aec_default">false</string>

    <string name="pref_opensles_key">opensles_preference</string>
    <string name="pref_opensles_title">Use OpenSL ES for audio playback</string>
    <string name="pref_opensles_dlg">Use OpenSL ES for audio playback</string>
    <string name="pref_opensles_default">false</string>

    <string name="pref_noaudioprocessing_key">audioprocessing_preference</string>
    <string name="pref_noaudioprocessing_title">Disable audio processing</string>
    <string name="pref_noaudioprocessing_dlg">Disable audio processing pipeline</string>
    <string name="pref_noaudioprocessing_default">false</string>

    <string name="pref_manage_speakerphone_by_proximity_key">manage_speakerphone_by_proximity_preference</string>
    <string name="pref_manage_speakerphone_by_proximity_title">Manage Speaker Phone by Proximity Sensor</string>
    <string name="pref_manage_speakerphone_by_proximity_dlg">Manage Speaker Phone by Proximity Sensor</string>
    <string name="pref_manage_speakerphone_by_proximity_summary">Enables managing of Speaker Phone by Proximity Sensor for Audio calls</string>
    <string name="pref_manage_speakerphone_by_proximity_default">false</string>

    <!--Call Settings-->
    <string name="pref_answer_time_interval_key">answer_time_interval</string>
    <string name="pref_answer_time_interval_title">Answer Time Interval (15&#8211;90s)</string>
    <string name="pref_answer_time_interval_default_value">60</string>
    <integer name="pref_answer_time_interval_min_value">15</integer>
    <integer name="pref_answer_time_interval_max_value">90</integer>
    <integer name="pref_answer_time_interval_step_size">5</integer>

    <string name="pref_disconnect_time_interval_key">disconnect_time_interval</string>
    <string name="pref_disconnect_time_interval_title">Disconnect Time Interval (10&#8211;90s)</string>
    <string name="pref_disconnect_time_interval_default_value">10</string>
    <integer name="pref_disconnect_time_interval_min_value">10</integer>
    <integer name="pref_disconnect_time_interval_max_value">90</integer>
    <integer name="pref_disconnect_time_interval_step_size">5</integer>

    <string name="pref_dialing_time_interval_key">Dialing_time_interval</string>
    <string name="pref_dialing_time_interval_title">Dialing Time Interval (3&#8211;10s)</string>
    <string name="pref_dialing_time_interval_default_value">5</string>
    <integer name="pref_dialing_time_interval_min_value">3</integer>
    <integer name="pref_dialing_time_interval_max_value">10</integer>
    <integer name="pref_dialing_time_interval_step_size">1</integer>

    <string name="pref_videocodec_key">videocodec_preference</string>
    <string name="pref_videocodec_title">Default video codec</string>
    <string name="pref_videocodec_dlg">Select default video codec</string>
    <string name="pref_videocodec_default">0</string>

    <string name="pref_hwcodec_key">hwcodec_preference</string>
    <string name="pref_hwcodec_title">Video codec hardware acceleration</string>
    <string name="pref_hwcodec_default">true</string>

    <string name="pref_audiocodec_key">pref_audio_codec</string>
    <string name="pref_audiocodec_title">Default audio codec</string>
    <string name="pref_audiocodec_def">ISAC</string>
    <string name="pref_audiocodec_dlg">Select default audio codec</string>
    <string name="accepted">Accepted</string>
    <string name="connection_was_lost">Connection was lost</string>

    <string name="opponents">and %s other</string>
    <string name="opponent">and %s </string>
    <string name="ringing">Ringing</string>
    <string name="stop_share">Stop</string>

    <!-- App info -->
    <string name="navi">navi</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_groups">Click on the add button to create groups with your contacts</string>
    <string name="no_chats">Click on the add button to chat with your contacts</string>
    <string name="no_contacts">Click on the share button to add your contacts</string>

    <!-- TODO: Remove or change this placeholder text -->

</resources>
