<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:theme="@style/AppTheme"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:contentDescription="@string/title_logo"
                android:src="@drawable/app_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="HiveApp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="30sp"
                android:layout_marginStart="20dp" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear1"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp">

            <ImageView
                android:id="@+id/image_phone_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@color/colorPrimary"
                android:padding="8dp"
                android:src="@drawable/ic_phone_blue_24dp"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/numbertextView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignBottom="@+id/image_phone_icon"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="3dp"
                android:layout_toEndOf="@id/image_phone_icon"
                android:layout_toRightOf="@id/image_phone_icon"
                android:background="@color/edit_text_bg"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/_91"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/numbertextView"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_toEndOf="@id/numbertextView"
                android:layout_toRightOf="@id/numbertextView"
                android:background="@color/edit_text_bg"
                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:paddingStart="25dp"
                android:paddingLeft="25dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                tools:ignore="RtlSymmetry" />


        </RelativeLayout>

        <Button
            android:id="@+id/signButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayout"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:background="@color/colorAccent"
            android:text="@string/submit" />

    </LinearLayout>


</RelativeLayout>